# lvmdatasimulator

./: .gitignore  .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
data/: LVM_continuum_models.fits
data/instrument/: sdR-s-b1-00002998.disp.fits  sdR-s-b1-00003082.trc.fits  sdR-s-r1-00001563.disp.fits  sdR-s-r1-00001613.trc.fits  sdR-s-z1-00001563.disp.fits  sdR-s-z1-00001614.trc.fits
data/instrument/fibers/: opFibers.par
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
examples/: LVM_data_simulator_tutorial.ipynb  LVM_data_simulator_tutorial1.ipynb  LVM_data_simulator_tutorial2.ipynb  LVM_data_simulator_tutorial3.ipynb  LVM_data_simulator_tutorial4.ipynb  LVM_data_simulator_tutorial5.ipynb
python/lvmdatasimulator/: __init__.py  exceptions.py  fibers.py  field.py  instrument.py  ism.py  main.py  observation.py  projection2d.py  run.py  simulator.py  simulator2d.py  stars.py  telescope.py  utils.py  wavecoords.py
python/lvmdatasimulator/etc/: lvmdatasimulator.yml  lvmdatasimulator_utah.yml
tests/: conftest.py  test_main.py  test_stars.py
