[build-system]
requires = ["wheel", "setuptools", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "sdss-lvmdatasimulator"
version = "1.0.0"
authors = [
    {name = "Oleg Egorov", email = "oleg.egorov@uni-heidelberg.de"},
    {name = "Enrico Congiu", email = "econgiu@eso.org"},
]
description = "Simulator of SDSS-V/LVM data"
readme = "README.MD"
requires-python = ">=3.7"

keywords = ["astronomy", "software"]
license = {text = "BSD-3-Clause", file="LICENSE.md"}

classifiers = [
    "Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Documentation :: Sphinx",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    'numpy>=1.14.5',
    'sdss-tree>=2.15.2',
    'sdss-access>=0.2.3',
    'sdsstools>=0.4.0',
    'astropy>=4.3.1',
    'astroquery>=0.4.3',
    'spectres',
    'scipy',
	'pyphot',
	'dataclasses',
	'astroplan',
	'joblib',
	'shapely',
	"sympy",
	"backports-cached-property; python_version=='3.7'",
	'pyneb',
	'pycloudy',
	'tqdm',
]
#dynamic = ["version"]

[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
mypkg = ["etc/*"]

[tool.isort]
line_length = 79
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'SDSS', 'FIRSTPARTY', 'LOCALFOLDER']
default_section = 'THIRDPARTY'
known_first_party = 'lvmdatasimulator'
known_sdss = ['sdssdb','sdsstools']
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.flake8]
ignore = ['H101', 'E722', 'W504', 'W505']
per-file-ignores = ["*/__init__.py:E,W"]
max-line-length = 99

[tool.pytest]
adopts = '--cov lvmdatasimulator --cov-report html -W ignore'

[tool.coverage]
run = {branch = true, include = "python/lvmdatasimulator/*", omit = ["*/utils/*.py","*/__init__.py"]}


[project.urls]
homepage = "https://github.com/sdss/lvmdatasimulator"
documentation = "https://readthedocs.org"
repository = "https://github.com/sdss/lvmdatasimulator.git"
changelog = "https://github.com/sdss/lvmdatasimulator/blob/main/CHANGELOG.rst"

#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/