[metadata]
name = sdss-lvmdatasimulator
version = 0.1.0dev.0
author = Oleg Egorov, Enrico Congiu
author_email = oleg.egorov@uni-heidelberg.de
description = Simulator of LVM data for testing DRP and DAP
url = https://github.com/sdss/lvmdatasimulator
project_urls =
	Repository = https://github.com/sdss/lvmdatasimulator
	Documentation = https://sdss-lvmdatasimulator.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
	= python
install_requires =
	sdss-tree>=2.15.2
	sdss-access>=0.2.3
	sdsstools>=0.4.0
	astropy>=4.3.1
	astroquery>=0.4.3
	spectres
	scipy
	pyphot
	progressbar2
	os
scripts =
	bin/lvmdatasimulator

[options.packages.find]
where =
	python

[options.package_data]
lvmdatasimulator =
	etc/*

[options.extras_require]
dev =
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
	sphinx>=3.0.0
	spectres
	scipy
	pyphot
	progressbar2
	os

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSS
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = lvmdatasimulator
known_sdss =
	sdssdb
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov lvmdatasimulator --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/lvmdatasimulator/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
