[metadata]
name = sdss-lvmdatasimulator
version = 1.0.0
author = Oleg Egorov, Enrico Congiu
author_email = oleg.egorov@uni-heidelberg.de, econgiu@eso.org
description = Simulator of LVM data for testing DRP and DAP
url = https://github.com/sdss/lvmdatasimulator
project_urls =
	Repository = https://github.com/sdss/lvmdatasimulator
	Documentation = https://sdss-lvmdatasimulator.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
	= python
install_requires =
;    numpy==1.16.0; python_version=='3.6' and platform_system=='AIX'
    numpy==1.16.0; python_version=='3.7' and platform_system=='AIX'
    numpy==1.23.3; python_version=='3.9' and platform_system=='OS400'
;    numpy==1.19.2; python_version=='3.6' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.2; python_version=='3.7' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.2; python_version=='3.8' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
	numpy==1.21.0; python_version=='3.7' and platform_machine=='arm64' and platform_system=='Darwin'
    numpy==1.21.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin'
    numpy==1.21.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin'
	numpy==1.17.5; python_version=='3.8' and platform_machine=='s390x' and platform_python_implementation != 'PyPy'
    numpy==1.22.2; platform_machine=='loongarch64' and python_version<'3.11'
;    numpy==1.13.3; python_version=='3.6' and platform_machine not in 'aarch64|loongarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
    numpy==1.14.5; python_version=='3.7' and platform_machine not in 'arm64|aarch64|loongarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
    numpy==1.17.3; python_version=='3.8' and platform_machine not in 'arm64|aarch64|s390x|loongarch64' and platform_python_implementation != 'PyPy'
    numpy==1.19.3; python_version=='3.9' and platform_system not in 'OS400' and platform_machine not in 'arm64|loongarch64' and platform_python_implementation != 'PyPy'
    numpy==1.21.6; python_version=='3.10' and platform_machine!='loongarch64' and platform_python_implementation != 'PyPy'
    numpy==1.23.2; python_version=='3.11' and platform_python_implementation != 'PyPy'
;    numpy==1.19.0; python_version=='3.6' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
    numpy==1.20.0; python_version=='3.7' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
    numpy==1.22.2; python_version=='3.8' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
    numpy; python_version>='3.12'
    numpy; python_version>='3.9' and platform_python_implementation=='PyPy'
	matplotlib
	sdss-tree>=2.15.2
	sdss-access>=0.2.3
	sdsstools>=0.4.0
	astropy>=4.3.1
	astroquery>=0.4.3
	spectres
	scipy
	pyphot
	dataclasses
	astroplan
	joblib
	shapely
	sympy
	backports-cached-property; python_version=='3.7'
	pyneb
	pycloudy
	tqdm

scripts =
	bin/lvmdatasimulator

[options.packages.find]
where =
	python

[options.package_data]
lvmdatasimulator =
	etc/*

[options.extras_require]
dev =
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
	sphinx>=3.0.0
	astroplan
	shapely
	sympy

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSS
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = lvmdatasimulator
known_sdss =
	sdssdb
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov lvmdatasimulator --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/lvmdatasimulator/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
